new updated function

--- a/source/_misc/hnd-surveys-mision.ipynb
+++ b/source/_misc/hnd-surveys-mision.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "89421d2b",
+   "id": "a9fe07c0",
    "metadata": {},
    "source": [
     "## Programa Presidencial “Bono Vida Mejor\" en sus Dominios Rural y Urbano\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "7c6cb203",
+   "id": "7f563ca1",
    "metadata": {},
    "source": [
     "<script>\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cd018816",
+   "id": "0b9a6d0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cfbe282d",
+   "id": "db1160d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "da935a72",
+   "id": "69542643",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c385b005",
+   "id": "0f65d61f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efd6bfc7",
+   "id": "feef7349",
    "metadata": {},
    "source": [
     "### Pobreza nacional"
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "eb68eac5",
+   "id": "a1c44818",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff5c0e23",
+   "id": "2943fdf9",
    "metadata": {},
    "source": [
     "### Simulador"
@@ -134,8 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "bf3d27ec",
+   "execution_count": 6,
+   "id": "3fd484ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,18 +243,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a96ae125",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_hnd[]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 198,
-   "id": "1839b8a5",
+   "id": "4c85e32b",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "9757891d",
+   "id": "c9e7635c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "6b874462",
+   "id": "759437a9",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "c47f7ae5",
+   "id": "e9db6362",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "2fbe6d25",
+   "id": "4209d5a6",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e54f8721",
+   "id": "afdaf468",
    "metadata": {},
    "source": [
     "### Resultados"
@@ -353,8 +343,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "b4bd1950",
+   "execution_count": 7,
+   "id": "b37d797f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,26 +353,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "8f309422",
+   "execution_count": null,
+   "id": "5386ff84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = simulacion(350000, 0.5, [335,200], 16, 1)"
+    "dropdown_year\n",
+    "dropdown_purpose\n",
+    "bounded_num\n",
+    "input_widgets = widgets.HBox([dropdown_year, dropdown_purpose, bounded_num])\n",
+    "display(input_widgets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ec13b99f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#result = simulacion(350000, 1, [335,200], 30, 1)\n",
+    "#result = simulacion(350000, 1, [335,0], 30, 1)\n",
+    "result = simulacion(0, 0, [0], 30, 1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "90958ca9",
+   "id": "ba7adafd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "poor_national_new\n",
-       "0.0    0.375331\n",
-       "1.0    0.624669\n",
+       "poor_national\n",
+       "0.0    0.369657\n",
+       "1.0    0.630343\n",
        "Name: factor_ci, dtype: float64"
       ]
      },
@@ -392,7 +398,65 @@
     }
    ],
    "source": [
+    "data_hnd.groupby(\"poor_national\").factor_ci.sum()  / data_hnd.groupby(\"poor_national\").factor_ci.sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c82ef516",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "poor_national_new\n",
+       "0.0    0.369657\n",
+       "1.0    0.630343\n",
+       "Name: factor_ci, dtype: float64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "result.groupby(\"poor_national_new\").factor_ci.sum()  / result.groupby(\"poor_national_new\").factor_ci.sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b1c06eb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "poor_national_new\n",
+       "0.0    0.369657\n",
+       "1.0    0.630343\n",
+       "Name: factor_ci, dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.groupby(\"poor_national_new\").factor_ci.sum()  / result.groupby(\"poor_national_new\").factor_ci.sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f28bdf33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.pc_ytot_ch_perc"
    ]
   }
  ],
